--- a/naucna-centrala-frontend/src/app/app.component.html
+++ b/naucna-centrala-frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-header></app-header>
 <div>
     <router-outlet ></router-outlet>
 </div>
